@@ -9,6 +9,7 @@
 #define ARMA_NO_DEBUG
 
 #include <RcppArmadillo.h>
+#include <omp.h>  // OpenMP
 #include "fastLasso.h"
 #include "utils.h"
 
@@ -20,6 +21,6 @@ RcppExport SEXP R_testCStep(SEXP R_x, SEXP R_y, SEXP R_lambda, SEXP R_lassoSubse
 RcppExport SEXP R_testKeepBest(SEXP R_subsetMat, SEXP R_crits, SEXP R_nkeep);
 RcppExport SEXP R_fastSparseLTS(SEXP R_x, SEXP R_y, SEXP R_lambda, SEXP R_subsets,
 		SEXP R_intercept, SEXP R_ncstep, SEXP R_nkeep, SEXP R_tol, SEXP R_eps,
-		SEXP R_useGram);
+		SEXP R_useGram, SEXP R_ncores);
 
 #endif
